--- a/src/application/pages/accueil/style.css
+++ b/src/application/pages/accueil/style.css
@@ -8,3 +8,24 @@
   background-color: rgb(240, 238, 238);
   border-radius: 10px;
 }
+
+.section-main {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.section-blue {
+  background: linear-gradient(270.3deg, rgba(123, 97, 255, 0.46) 3.25%, rgba(123, 97, 255, 0.63) 55.33%, rgba(123, 97, 255, 0.39) 99.82%), linear-gradient(0deg, #00006D, #00006D);
+}
+
+.section-main h1 {
+  color: white;
+  text-align: left;
+  margin-bottom: 1.2em;
+}
+
+.button {
+  max-width: fit-content;
+  background-color: white;
+}
