--- a/src/SPACE/assets/style.css
+++ b/src/SPACE/assets/style.css
@@ -4,13 +4,12 @@
 }
 
 .actu:hover {
-
   background-color: rgb(240, 238, 238);
   border-radius: 10px;
 }
 
-.section-container{
-  margin-left: 20px
+.section-container {
+  margin-left: 20px;
 }
 
 .section-main {
@@ -20,7 +19,13 @@
 }
 
 .section-blue {
-  background: linear-gradient(270.3deg, rgba(123, 97, 255, 0.46) 3.25%, rgba(123, 97, 255, 0.63) 55.33%, rgba(123, 97, 255, 0.39) 99.82%), linear-gradient(0deg, #00006D, #00006D);
+  background: linear-gradient(
+      270.3deg,
+      rgba(123, 97, 255, 0.46) 3.25%,
+      rgba(123, 97, 255, 0.63) 55.33%,
+      rgba(123, 97, 255, 0.39) 99.82%
+    ),
+    linear-gradient(0deg, #00006d, #00006d);
 }
 
 .section-main h1 {
@@ -33,11 +38,11 @@
   max-width: fit-content;
   background-color: white;
 }
-.home-hero-anim{
+.home-hero-anim {
   margin-left: 80px;
   position: relative;
 }
-.hero-anim-background{
-      width: 60%;
-      height: 60%;
+.hero-anim-background {
+  width: 60%;
+  height: 60%;
 }
